--- a/VideoIQ/Base.lproj/Main.storyboard
+++ b/VideoIQ/Base.lproj/Main.storyboard
@@ -16,10 +16,29 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i07-qL-0ea">
+                                <rect key="frame" x="0.0" y="64" width="42" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="MNo-hb-bLO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="i07-qL-0ea" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="PdY-Q8-hzZ"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="i07-qL-0ea" secondAttribute="trailing" constant="20" symbolic="YES" id="eTF-J2-dIQ"/>
+                            <constraint firstItem="i07-qL-0ea" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wTz-yi-x2J"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="2ja-qO-Dsp"/>
+                    <connections>
+                        <outlet property="objectDescription" destination="i07-qL-0ea" id="lkJ-9d-uqR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
